# Computergrafik_Pflichtteil_Linux

./: CMakeLists.txt
ogl/: CGTutorial.cpp
